--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<title>Jason's JukeBox</title>   
 	</head>
 	<body>  
-		<div>
+		<div id="page">
+			<img src="images/dance.gif"/>
+		</div>
+		<div id="buttons">
 			<button id="play">Play</button>
 			<button id="pause">Pause</button>
 			<button id="switch">Switch</button>  
